Menambahkan Profile dan About

--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleindex.css">
-    <title>Dashboard</title>
-</head>
-<body>
-    <div class="navbar navbar-">
-        <a href="#Home">Home</a>
-        <a href ="#Profile">Profile</a>
-        <a href ="#About">About</a>
-    </div>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css\styleindex.css">
+        <title>Dashboard</title>
+    </head>
+    <body>
+        <div class="navbar">
+            <a href="#index.html">Home</a>
+            <a href="#profile.html">Profile</a>
+            <a href="#About.html">About</a>
+        </div>
+        <div class="image-background">
+            <img src="Image/1567666.png" alt="Gambar backgound">
+        </div>
+        <div class="container">
+            <h1>Halaman Protofolio</h1>
+            <div class="text-center">
+                <p>Menggunakan HTML dan style CSS</p>
+                <p>Langkah sederhana untuk memahami pengembangan website dengan
+                    baik</p>
+            </div>
+        </div>
+        <div class="footer">
+            &copy; 2023 Hak Cipta Dilindungi
+        </div>
+    </body>
+
 </html>
