--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css\styleindex.css">
-        <title>Dashboard</title>
+        <title>About</title>
     </head>
     <body>
         <div class="navbar">
@@ -16,16 +16,6 @@
         <div class="image-background">
             <img src="Image/1567666.png" alt="Gambar backgound">
         </div>
-        <div class="container">
-            <h1>Halaman Protofolio</h1>
-            <div class="text-center">
-                <p>Menggunakan HTML dan style CSS</p>
-                <p>Langkah sederhana untuk memahami pengembangan website dengan
-                    baik</p>
-            </div>
-        </div>
-        <div class="footer">
-            &copy; 2023 Hak Cipta Dilindungi
-        </div>
+        <a> ini adalah about</a>
     </body>
 </html>
