--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +15,7 @@
         <div class="image-background">
             <img src="Image/1567666.png" alt="Gambar backgound">
         </div>
+        <button class="login-btn">sign in</button>
         <div class="container">
             <h1>Halaman Protofolio</h1>
             <div class="text-center">
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="footer">
-            &copy; 2023 Hak Cipta Dilindungi
+            &copy; Habib Al Qodri
         </div>
     </body>
 </html>
