Menambahkan fungsi login, memperbaiki halaman profil dan membuat form register

--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
         <title>Dashboard</title>
     </head>
     <body>
-        <div class="navbar">
+        <!-- <div class="navbar">
             <a href="index.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="about.html">About</a>
-        </div>
-        <div class="image-background">
-            <img src="Image/1567666.png" alt="Gambar backgound">
-        </div>
-        <button class="login-btn">sign in</button>
+        </div> -->
+        <!-- <button class="login-btn">sign in</button>
         <div class="container">
             <h1>Halaman Protofolio</h1>
             <div class="text-center">
@@ -26,6 +23,6 @@
         </div>
         <div class="footer">
             &copy; Habib Al Qodri
-        </div>
+        </div> -->
     </body>
 </html>
