--- a/profile.html
+++ b/profile.html
@@ -15,10 +15,12 @@
         <div class="image-background">
             <img src="Image/1567666.png" alt="Gambar backgound">
         </div>
-        <div class="table-card">
+        <div class="table-foto">
             <div class="foto-card">
                 <img src="Image\4.jpg" alt="Gambar profil">
             </div>
+        </div>
+        <div class="table-card">
             <table class="identitas">
                 <tr>
                     <td>Nama</td>
