menambahkan form register, memperbaiki tampilan halaman profile, menyesuaikan background dashboard

--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
         <title>Dashboard</title>
     </head>
     <body>
-        <!-- <div class="navbar">
+        <div class="navbar">
             <a href="index.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="about.html">About</a>
-        </div> -->
-        <!-- <button class="login-btn">sign in</button>
+        </div>
+        <button onclick="window.location.href='register.html'" class="login-btn">Sign In</button>
         <div class="container">
             <h1>Halaman Protofolio</h1>
             <div class="text-center">
                 <p>Menggunakan HTML dan style CSS</p>
-                <p>Langkah sederhana untuk memahami pengembangan website dengan
-                    baik</p>
+                <p>Langkah sederhana untuk memahami pengembangan website dengan baik</p>
             </div>
         </div>
         <div class="footer">
             &copy; Habib Al Qodri
-        </div> -->
+        </div>
     </body>
 </html>
