--- a/profile.html
+++ b/profile.html
@@ -12,23 +12,39 @@
             <a href="profile.html">Profile</a>
             <a href="about.html">About</a>
         </div>
-        <div class="image-background">
-            <img src="Image/1567666.png" alt="Gambar backgound">
+        <button onclick="window.location.href='register.html'" class="login-btn">Sign In</button>
+        <div class="judul">
+            <h1>Profile Saya</h1>
         </div>
-        <div class="table-foto">
-            <div class="foto-card">
-                <img src="Image\4.jpg" alt="Gambar profil">
+        <div class="foto-card">
+            <img class="img-card" src="Image\4.jpg" alt="profile">
+            <div class="foto-descrip">
+                <table>
+                    <tr>
+                        <td>Nama:</td>
+                        <td>Habib Al qodri</td>
+                    </tr>
+                    <tr>
+                        <td>NPM:</td>
+                        <td>G1A023047</td>
+                    </tr>
+                    <tr>
+                        <td>Alamat:</td>
+                        <td>Kandang Limun. Kota Bengkulu, Bengkulu</td>
+                    </tr>
+                </table>
             </div>
         </div>
         <div class="table-card">
+            <h1>Informasi Umum</h1>
             <table class="identitas">
                 <tr>
-                    <td>Nama</td>
-                    <td>Habib Al Qodri</td>
+                    <td>Jenis Kelamin</td>
+                    <td>Laki-Laki</td>
                 </tr>
                 <tr>
-                    <td>Nomor Induk Mahasiswa</td>
-                    <td>G1A023047</td>
+                    <td>Tahun Akademi</td>
+                    <td>2023</td>
                 </tr>
                 <tr>
                     <td>No Telepon</td>
@@ -36,13 +52,22 @@
                 </tr>
                 <tr>
                     <td>Hobi</td>
-                    <td>Lari</td>
+                    <td>Lari, Game, Movie</td>
                 </tr>
                 <tr>
                     <td>Asal Sekolah</td>
                     <td>SMAN Tugumulyo</td>
                 </tr>
             </table>
+        </div>
+        <div class="desc-card">
+            <div class="description">
+                <h1>Informasi Lain</h1>
+                <p>Hanya Seorang yang ingin hidup tenang, mengerjakan sesuatu dengan ritme yang disesuaikan dengan kebutuhan sehingga tidak memaksakan diri sendiri.</p>
+            </div>
+        </div>
+        <div class="footer">
+            &copy; Habib Al Qodri
         </div>
     </body>
 </html>
