--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
             <a href="profile.html">Profile</a>
             <a href="about.html">About</a>
         </div>
-        <div class="image-background">
-            <img src="Image/1567666.png" alt="Gambar backgound">
-        </div>
+        <button onclick="window.location.href='register.html'" class="login-btn">Sign In</button>
         <a> ini adalah about</a>
+        <div class="footer">
+            &copy; Habib Al Qodri
+        </div>
     </body>
 </html>
