--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Form</title>
-    <link rel="stylesheet" href="/porto/css/styleregister.css">
+    <link rel="stylesheet" href="css/styleregister.css">
 </head>
 <body>
     <div class="wrapper">
