--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Dashboard</title>
     </head>
     <body>
+        <div class="background">
+            <img src="Image\1567666.png" alt="Background">
+        </div>
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="profile.html">Profile</a>
