--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
             <h1>Profile Saya</h1>
         </div>
         <div class="foto-card">
-            <img class="img-card" src="Image\4.jpg" alt="profile">
+            <img class="img-card" src="image\4.jpg" alt="profile">
             <div class="foto-descrip">
                 <table>
                     <tr>
