Melengkapi semua fitur website dan gambar profile yang benar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="profile.html">Profile</a>
+            <a href="about.html">About</a>
         </div>
-        <button onclick="window.location.href='register.html'" class="login-btn">Sign In</button>
+        <button onclick="window.location.href='login.html'" class="login-btn">Login</button>
+        <button onclick="window.location.href='register.html'" class="sign-btn">Sign In</button>
         <div class="container">
             <h1>Halaman Protofolio</h1>
             <div class="text-center">
