--- a/profile.html
+++ b/profile.html
@@ -10,13 +10,15 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="profile.html">Profile</a>
+            <a href="about.html">About</a>
         </div>
-        <button onclick="window.location.href='register.html'" class="login-btn">Sign In</button>
+        <button onclick="window.location.href='login.html'" class="login-btn">Login</button>
+        <button onclick="window.location.href='register.html'" class="sign-btn">Sign In</button>
         <div class="judul">
             <h1>Profile Saya</h1>
         </div>
         <div class="foto-card">
-            <img class="img-card" src="image\4.jpg" alt="profile">
+            <img class="img-card" src="image\profille.jpg" alt="profile">
             <div class="foto-descrip">
                 <table>
                     <tr>
