--- a/login.html
+++ b/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Form</title>
-    <link rel="stylesheet" href='css\styleregister.css'>
+    <title>Login Form</title>
+    <link rel="stylesheet" href="css\stylelogin.css">
 </head>
 <body>
     <div class="wrapper">
-        <h1>Register Form</h1>
+        <h1>Login Form</h1>
         <form action="index.html" method="GET">
             <div class="input-box">
                 <input type="text" name="username" placeholder="Username" required>
@@ -18,9 +18,6 @@
             </div>
             <div class="input-box">
                 <input type="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="input-box">
-                <input type="text" name="phone" placeholder="Phone Number" required>
             </div>
             <button type="submit" class="btn">Login</button>
         </form>
